# AutomationOS

./: .clang-format  .clang-tidy  .cppcheck  .gdbinit  .gitattributes  .gitignore  CHANGELOG.md  COMMIT_TASK21.sh  CONTRIBUTING.md  KREF_USAGE_EXAMPLES.c  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  TASK20_COMPLETION_REPORT.md  test_batch_build.sh  test_edge_cases.sh  test_input_compile.c  test_o1_build.c  test_readahead.sh  test_service_integration.sh  test_smp_iso.sh  test_task4.sh  test_usermode.sh  verify_o1_scheduler.sh
benchmarks/: run_all.sh
boot/: IMPLEMENTATION.md  Makefile  Makefile.enhanced  QUICK_REFERENCE.md  QUICK_START.md  README.md  VERIFICATION.md  ap_boot.S  boot.asm  boot.conf  boot.h  boot.ld  boot_config.c  boot_config.h  boot_crypto.c  boot_crypto.h  boot_enhanced.h  bootloader_enhanced.c  elf.c  loader.c  menu.c  paging.c  test-qemu.sh
build_test/: _dsplit_runner.sh  _dsplit_verdict.sh  _ti_soak_runner.sh  audio_check.sh  audio_diag.sh  audio_stream_check.sh  audio_streamtest_check.sh  browser2_img_verify.sh  browser_dedup_check.sh  cc_host_harness.c  cc_regression_smoke.sh  check_canary.sh  click_shot.py  crypto_w1a_check.sh  demo_check.sh  dhcp_apply_check.sh  dom.h  dom_stub.c  dz_audio_smoke.sh  dz_loot_smoke.sh  dz_mp2_smoke.sh  dz_mpgui_demo_check.sh  dz_mpgui_lean_check.sh  dz_mpgui_smoke.sh  dz_mplive_smoke.sh  (+73 more)
scripts/static-analysis/custom-checks/: AutomationOSChecks.cpp  CMakeLists.txt  README.md
scripts/static-analysis/custom-checks/tests/: CMakeLists.txt  lock-balance.c  null-check.c  syscall-validation.c
(+2014 files in other folders)
